testsuite/tests/properties/invalid_struct_update/not_a_struct.lkt
import common

class Example: FooNode implements TokenNode {
    @exported fun increment(kv: KV): KV = node.update(value=kv)
}
